--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -37,6 +37,7 @@ android {
         applicationId "com.example.cheviefutter"
         minSdkVersion 16
         targetSdkVersion 28
+        multiDexEnabled true
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
     }
@@ -54,6 +55,6 @@ flutter {
     source '../..'
 }
 dependencies {
-    implementation 'androidx.multidex:multidex:2.0.0'
-    implementation 'com.google.firebase:firebase-analytics:17.2.2'
+    implementation 'androidx.multidex:multidex:2.0.1'
+    implementation 'com.google.firebase:firebase-analytics:17.4.2'
 }
